@@ -6,16 +6,16 @@ AUX mygui-3.2.0-build.patch 2816 SHA256 3ca747abd0eafbb4bd67076cdb8a739cec2192bc
 AUX mygui-3.2.0-underlinking.patch 398 SHA256 7ae82493e90b9543bf592060348adff59b64c5469ea3b3d08a44f416ac27a614 SHA512 ad0e5e0e8aacdb65ea9195175f597eb95f265b07d0154482f2380ae6e837672d5d41b6d43b1266abb12dec319625426dd65a892aca7fdca297131bd4db2312b9 WHIRLPOOL 195a7786c561b9844e8385dd562e336ef88feeff13d1703e246a34bf28a9f6919c9ba9899bbe50b5f2f0b25efc7b5916046bec083f8ddd20168da8b4d3caf890
 DIST MyGUI_3.2.0.zip 14383788 SHA256 1704006f364b733b2d2cc6807c6dc10833cf695542b797aee50b8fd061eea19a SHA512 8ff8de065a6f355a03e45bfeac6d8db706ee7a122346f41ef26664dc8280d4d1cba8ac943afbaae27c5a1b7fb8bfa8729a1758cc87e8764370284aec943f9278 WHIRLPOOL 982c8fd9e714d7ebc5583a884953ef41fd6a2b2c1f62ec56bc81768ee607135116c14973e3eb4f528e636cf3ca1df6dd155931ea93b26fe537a66cb09a44aba4
 EBUILD mygui-3.2.0-r1.ebuild 3171 SHA256 d5a4f0568399eae57d2c0acd60df88e74069295cc7ec37ca2814c62984d1ebc5 SHA512 8f720bcc032943a5b3eed4395725be1632f2a35e014ead679b6a5bc988662a71feefa44f08c7c5e80fdfbfc8137665d7ab48ab1b68ebcc3bc81ecebcc391c5fd WHIRLPOOL 2826e845631e99277eafb6eae4fda4a7133080ae735fac2a71a236ccff20f10afcc0f6baffeaa3a99a919afdff8928a62ffc8861effd1c3894edb57a20ff3627
-MISC ChangeLog 461 SHA256 477da4b8a5dbcd86ae778128d9c6deeddb953a5c2d69e255655cf675f4845740 SHA512 07182bd82d78a5def974462ed90b0cd03b75a3b142770525612d9cda96bbd59b11abeb0753d213c937ab2cf337e6292e79976fc77fef2c9fef62cfa103d92ab3 WHIRLPOOL a7293bdba4dd22d52fa2d1260e39ff0fb9675d5094d2ab2ee797f8ac13a843caabc05b6bbc09dd3e4804f4c0dd2fc33815d045a66c7a48f165e57e4b63d1e0ed
-MISC metadata.xml 525 SHA256 4612f10cdff359390cde9af1071583f9bd474a36c6754fe48d01e1b66406ad4c SHA512 482be5695587a0fdad82e6b7983f4335f265bef0c1adeb90e8054d3f10df64f8b5ca40989130f077ca9ae967f4b2e34e671516a84a00262c423f7e7fb1b73c0c WHIRLPOOL fb24cc9da2fb1e883c4d595c72c65ef5aa0ae2339688a6c6bde2e2e6e4f5648f7087b2496e0c6874a05a2d7fbaf2a54fbb048e3184dd6b184b8c561f27bee7a8
+MISC ChangeLog 549 SHA256 e9b85aef07ca8c491d407ba2b5124ae5dfc214364b3622cb084f9462f209ec84 SHA512 2bf7959046b4f9568a56479aa163c729fbe21e9a8d4c9e4326c3fc5331d2e756b0e6c6e5a46038dc49b6c1b05da38fb4f6646a22500f666eae3de0bae938b20c WHIRLPOOL 50add5f5e713aff0b0b190e1aea213f13d5165ae3e811ccee71da02a62a3956075213f0960543a8f189de0082d37c33a45ab79b47aa75c0e0be44f3ef5c1e00c
+MISC metadata.xml 1929 SHA256 84a5a276d38026489665b7c42713d47bd1a138475466a3fc929f3560b1bc5dcc SHA512 620c83d026718c853c50f9d02968084b3f4e5d870a57e33f8b5a42206df28dd9071f0da786b35cf026d5d52a71d4b702fccfe72f57ee0a8c847834a84539889d WHIRLPOOL fcc3ed6fe4c6e3a418c7c7f76ad205918e202bd429e3bffe4d234f5bf5a105a9d4211b3f1d33f12d64af1394d44d06b859e6c36cd45f3d24849871903df6728d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQkYwDAAoJEFpvPKfnPDWzXXMIAJKntiJu/vCLfQ6nedN7UhWJ
-KTtVyCKTfPySdGhha6FMFZoV5UlIP8ZncG6GlwXwkF/1SFma2UGQ6BEEB9gIFWWY
-U9/rSGy+axKhSaxtbi5bpmIzAaanZL/nAlDLmayULQlMxTaT5huGOJ3KJxCM5x5W
-Y8dv4vnuEhnkHXD5tn/4Zp4vV96bMiJ56dnPwZkoUhYrWBUYNGh9gjczKgu7Z1AL
-RzWgL9+kkeAkPmKPlaIpanyCr6omXE8e1Vlsd3qsYfK5xl7Jg/QJiuwVOAG3wBFW
-VdZDBjlFGZlpkPApK9FUP1WdPjaN5VsIF7XqU8VIgLRK51X6Ji4igYnUAiFwLvI=
-=UneW
+iQEcBAEBCAAGBQJQkZuUAAoJEFpvPKfnPDWz8W0H/14GslkiLlNJ7jIlPi1ztRDJ
+8W/+KafRmbpg7u9zo3wA6h91t4PO6vtPP2SpS8XyWPbjGzIhzgGyQ8m7/87FpBqH
+D1R5Nii//8SxJHGURrZEl4CzINtWJOxuv0YwUp2XbgLnE5f0/qIPykfE/rnDKoDt
+qb1adtfB+oAau9Dp6gRixGwi7jRGmBM5DHBWOYZQD0tyQIFXegEXtAUTFxrJGooI
+GYH4w7KHDm504/yYo/eNJn7UvRaG5W+ro4FVFprtLQg11mAir8074nSX/hZfCoHW
+aLoaZgybiP67lMvbcJEY8kwS2beb2u8jOBqhq+f91/LeLD+yYTyJkcXlMtpg9F0=
+=WNka
 -----END PGP SIGNATURE-----
