@@ -5,12 +5,44 @@
 	<maintainer>
 		<email>hasufell@gentoo.org</email>
 		<name>Julian Ospald</name>
+		<description>Maintainer, assign bugs to him</description>
 	</maintainer>
+	<upstream>
+		<maintainer status="active">
+                <email>altren@list.ru</email>
+				<name>Evmenov Georgiy</name>
+				<description>CC on bugs</description>
+        </maintainer>
+        <changelog>http://redmine.mygui.info/repositories/entry/mygui/tags/MyGUI3.2/ChangeLog.txt</changelog>
+        <bugs-to>https://sourceforge.net/tracker/?group_id=193706&amp;atid=946487</bugs-to>
+	</upstream>
 	<use>
 		<flag name="linguas_ru">Install some additional russian docs if 'doc' useflag enabled</flag>
 		<flag name="plugins">Build MyGUI plugins</flag>
 		<flag name="samples">Install MyGUI demos</flag>
 		<flag name="tools">Build the tools for development</flag>
 	</use>
+	<longdescription lang="en">
+		MyGUI is a library for creating Graphical User Interfaces (GUIs) for
+		games and 3D applications. The main goals of mygui are: speed,
+		flexibility and ease of use.
+
+		Speed
+		We speed up our system by using our own batching subsystem which
+		combines geometry. It is also possible for the more experienced
+		developers to write their own render system or new subsystems
+
+		Flexibility
+		The library supports plugins that allows you to create dynamically
+		loaded custom controls or subsystems. Most subsystems are expandable
+		with plugins without the need to touch the core code. All resources
+		and settings are described in XML files. It is possible to load
+		resources like fonts, cursors, images, skins, etc. Forms (layouts)
+		via dynamically by using XML files.
+
+		Simplicity
+		The user interface is easy to use and uses delegates (Signals and
+		slots) for easy to use event handling.
+	</longdescription>
 </pkgmetadata>
 
