@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/mygui
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/mygui/ChangeLog,v 1.1 2012/10/31 20:37:20 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/mygui/ChangeLog,v 1.2 2012/10/31 21:43:44 hasufell Exp $
+
+  31 Oct 2012; Julian Ospald <hasufell@gentoo.org> metadata.xml:
+  update metadata.xml
 
 *mygui-3.2.0-r1 (31 Oct 2012)
 
